# gemini-live-flask

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  render.yaml  requirements.txt
static/: styles.css
static/js/: gemini-client.js  gemini.js  main.js  mic.js  particles.js
static/js/glsl/: fragment.glsl  vertex.glsl
static/star-data/: csv_to_json.py
templates/: index.html
