[project]
name = "gemini-live-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-sock>=0.7.0",
    "gevent>=25.6.1",
    "gevent-websocket>=0.10.1",
    "google-genai>=1.73.1",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.13.1",
    "websockets>=16.0",
]
